--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap'); */
+@import url("https://fonts.googleapis.com/css2?family=Bakbak+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +32,66 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+
+.searchInputWrapper {
+  background: rgba(255, 255, 255, 0.2);
+}
+.navLoginBTN {
+  border-radius: 37px;
+  background: var(
+    --Red-gradient,
+    linear-gradient(180deg, #e90029 0%, #9f0000 100%)
+  );
+}
+.heroBgImage {
+  opacity: 0.3;
+  background: url("../public/heroBg.png") lightgrey 50% / cover no-repeat;
+  /* background-color: #000000; */
+}
+.circelBgColor {
+  /* background: linear-gradient(180deg, #e90029 0%, #9f0000 100%); */
+  background: #e90029;
+  opacity: 0.4;
+  filter: blur(170.39999389648438px);
+}
+.textBgColor {
+  background: linear-gradient(90deg, #ffb6b6 0%, #e70f35 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.getStartedBtn {
+  border-radius: 60px;
+  background: linear-gradient(180deg, #e90029 0%, #9f0000 100%);
+}
+.videoWrapper {
+  z-index: 10;
+}
+.videoWrapper::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  z-index: -1;
+  background: linear-gradient(180deg, #e90029 0%, #9f0000 100%);
+  transform: rotateZ(10deg);
+}
+.borderBgColor {
+  position: relative;
+  z-index: 10;
+  background-color: #1c1c1c;
+}
+.borderBgColor::after{
+  position:absolute;
+  content: ''; 
+  top: -4px;
+  left: -4px;
+  height: 102%;
+  width: 102%;
+  background:linear-gradient(90deg, rgba(28,28,28,1) 0%, rgba(255,255,255,1) 100%);
+  z-index: 0;
 }
