--- a/styles/globals.css
+++ b/styles/globals.css
@@ -145,7 +145,7 @@ body {
 .mainFooter__BgColor {
   background: linear-gradient(180deg, #e90029 0%, #9f0000 100%);
 }
-.tellUs__Wrapper{
+.tellUs__Wrapper {
   box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.25);
 }
 .inputBgColor {
@@ -154,3 +154,38 @@ body {
 .submitBtnBgColor {
   background: linear-gradient(180deg, #e90029 0%, #9f0000 100%);
 }
+.categoryPageBgColor {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #1c1c1c 100%);
+}
+
+
+
+.commitmentCards__outterWrapper{
+  position: relative;
+  border-radius: 16px;  
+  box-shadow: 6px 6px 15px 0px rgba(0, 0, 0, 0.40), -4px -4px 4px 0px rgba(255, 255, 255, 0.15), 2px 2px 4px 0px rgba(0, 0, 0, 0.30);
+  overflow: hidden;
+  
+}
+.commitmentCards__outterWrapper::after{
+  position: absolute;
+  content: '';
+  width: 150%;
+  height: 140%;
+  border-radius: 16px;  
+  background-image: conic-gradient(#E90029 20deg,transparent 120deg);
+
+  top: -90px;
+  left: -30px;
+  z-index: 0;
+  animation: rotate 2s linear infinite;
+}
+@keyframes rotate{
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
+
