--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,34 +158,38 @@ body {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #1c1c1c 100%);
 }
 
-
-
-.commitmentCards__outterWrapper{
+.commitmentCards__outterWrapper {
   position: relative;
-  border-radius: 16px;  
-  box-shadow: 6px 6px 15px 0px rgba(0, 0, 0, 0.40), -4px -4px 4px 0px rgba(255, 255, 255, 0.15), 2px 2px 4px 0px rgba(0, 0, 0, 0.30);
+  border-radius: 16px;
+  box-shadow: 6px 6px 15px 0px rgba(0, 0, 0, 0.4),
+    -4px -4px 4px 0px rgba(255, 255, 255, 0.15),
+    2px 2px 4px 0px rgba(0, 0, 0, 0.3);
   overflow: hidden;
-  
 }
-.commitmentCards__outterWrapper::after{
+.commitmentCards__outterWrapper::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 150%;
   height: 140%;
-  border-radius: 16px;  
-  background-image: conic-gradient(#E90029 20deg,transparent 120deg);
+  border-radius: 16px;
+  background-image: conic-gradient(#e90029 20deg, transparent 120deg);
 
   top: -90px;
   left: -30px;
   z-index: 0;
   animation: rotate 2s linear infinite;
 }
-@keyframes rotate{
-  0%{
+@keyframes rotate {
+  0% {
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     transform: rotate(360deg);
   }
 }
 
+.contactShadow {
+  box-shadow: 6px 6px 15px 0px rgba(0, 0, 0, 0.4),
+    -4px -4px 4px 0px rgba(255, 255, 255, 0.15),
+    2px 2px 4px 0px rgba(0, 0, 0, 0.3);
+}
