created category page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -193,3 +193,10 @@ body {
     -4px -4px 4px 0px rgba(255, 255, 255, 0.15),
     2px 2px 4px 0px rgba(0, 0, 0, 0.3);
 }
+
+#subCategory option{
+  background-color: #000;
+  border: none !important;
+  outline: none;
+  border-radius: 40px;
+}
